# svetlyachok

./: .gitignore  .mcp.json  AGENTS.md  README.md  skills-lock.json
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  ROADMAP.md  config.yaml
.ai-factory/plans/: autentifikatsiya-jwt.md  backend-mvp-dorabotki-cache-invalidation-bulk-fingerprints-l.md  backend-scaffold.md  baza-dannykh-i-migratsii.md  ml-klassifikatory-wknn-random-forest.md  mobile-prilozhenie-flutter-android.md  priyom-radiootpechatkov-i-kalibrovka.md  uchyot-rabochego-vremeni.md  upravlenie-sotrudnikami-i-zonami.md  web-admin-panel-react-vite-typescript.md
.ai-factory/rules/: base.md
.claude/: settings.local.json
.claude/skills/wifi-rssi-wknn/: SKILL.md
.opencode/skills/aif/: SKILL.md
backend/: .env.example  .env.test  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_01_1610-0001_initial_schema.py  2026_05_02_0900-0002_attendance_last_seen_at.py
backend/app/: main.py
backend/app/application/: shared.py
backend/app/application/attendance/: compute_summary.py  list_attendance.py  record_attendance.py
backend/app/application/employees/: authenticate.py  change_password.py  create_employee.py  deactivate_employee.py  list_employees.py  refresh_tokens.py  update_employee.py
backend/app/application/positioning/: classify_location.py  train_classifier.py
backend/app/application/radiomap/: calibrate_radiomap.py  delete_calibration_point.py  list_calibration_points.py  list_fingerprints.py  submit_fingerprint.py  submit_fingerprints_batch.py
backend/app/application/zones/: create_zone.py  delete_zone.py  list_zones.py  update_zone.py
backend/app/core/: config.py  logging.py
backend/app/domain/attendance/: entities.py  repositories.py  services.py  value_objects.py
backend/app/domain/employees/: entities.py  repositories.py  services.py  value_objects.py
backend/app/domain/positioning/: classifiers.py  entities.py  value_objects.py
backend/app/domain/radiomap/: entities.py  repositories.py  value_objects.py
backend/app/domain/shared/: exceptions.py  types.py
backend/app/domain/zones/: entities.py  repositories.py
backend/app/infrastructure/auth/: __init__.py  jwt_provider.py  password_hasher.py
backend/app/infrastructure/db/: base.py  healthcheck.py  session.py
backend/app/infrastructure/db/orm/: __init__.py  attendance.py  employees.py  radiomap.py  zones.py
backend/app/infrastructure/ml/: config.py  features.py  metrics.py  random_forest_classifier.py  wknn_classifier.py
backend/app/infrastructure/repositories/: attendance_repository.py  employees_repository.py  fingerprints_repository.py  zones_repository.py
backend/app/presentation/: dependencies.py  exception_handlers.py
backend/app/presentation/api/v1/: attendance.py  auth.py  calibration.py  employees.py  fingerprints.py  health.py  me.py  positioning.py  zones.py
backend/app/presentation/middleware/: correlation_id.py  rate_limit.py
backend/app/presentation/schemas/: attendance.py  auth.py  employees.py  errors.py  health.py  positioning.py  radiomap.py  zones.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_attendance.py  test_auth.py  test_calibration.py  test_calibration_invalidation.py  test_employees.py  test_fingerprints.py  test_fingerprints_batch.py  test_health.py  test_me.py  test_positioning.py  test_zones.py
backend/tests/integration/db/: test_migrations.py
backend/tests/ml/: test_random_forest_metrics.py  test_wknn_metrics.py
backend/tests/unit/application/: fakes.py  test_authenticate_use_case.py  test_change_password.py  test_compute_attendance_summary.py  test_create_employee.py  test_deactivate_employee.py  test_list_attendance.py  test_list_employees.py  test_radiomap_use_cases.py  test_record_attendance.py  test_refresh_tokens_use_case.py  test_submit_fingerprints_batch.py  test_update_employee.py  test_zones_use_cases.py
backend/tests/unit/core/: test_config.py
backend/tests/unit/domain/: test_radiomap_value_objects.py  test_shared_exceptions.py
backend/tests/unit/infrastructure/auth/: test_jwt_provider.py  test_password_hasher.py
backend/tests/unit/infrastructure/ml/: test_classifiers.py  test_features.py  test_metrics.py
docs/: api.md  architecture.md  attendance.md  configuration.md  getting-started.md  local-setup.md
mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
mobile/android/: gradle.properties
mobile/integration_test/: happy_path_test.dart
mobile/lib/: main.dart
mobile/test/: widget_test.dart
web/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  main.tsx
web/tests/: setup.ts
(+137 files in other folders)
