[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svetlyachok-backend"
version = "0.1.0"
description = "АИС «Светлячок» — backend для indoor-позиционирования по Wi-Fi RSSI fingerprinting"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "АИС Светлячок team" },
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]

dependencies = [
  # Web framework и валидация
  "fastapi>=0.115.0,<0.120.0",
  "uvicorn[standard]>=0.30.0,<0.40.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  # Логирование
  "structlog>=24.4.0,<26.0.0",
  "python-json-logger>=2.0.7,<4.0.0",
  # БД и миграции
  "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
  "asyncpg>=0.29.0,<0.31.0",
  "alembic>=1.13.0,<2.0.0",
  "greenlet>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  # Тестирование
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.30.0",
  "pytest-cov>=5.0.0,<7.0.0",
  "httpx>=0.27.0,<0.30.0",
  # Тестирование БД (testcontainer Postgres)
  "testcontainers>=4.7.0,<5.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  # Линтеры и тайп-чекеры
  "mypy>=1.11.0,<2.0.0",
  "ruff>=0.6.0,<0.15.0",
]

[project.urls]
Repository = "https://github.com/KAPLMARKS/svetlyachok"
Documentation = "https://github.com/KAPLMARKS/svetlyachok/blob/main/.ai-factory/DESCRIPTION.md"

# =============================================================================
# Hatchling — packaging
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================================
# Ruff — линтер и форматтер
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # Ruff-specific rules
  "S",    # flake8-bandit (security)
  "A",    # flake8-builtins (shadow built-ins)
]
ignore = [
  "E501",  # line too long (формат — задача форматтера)
  "S101",  # assert (используется в тестах и для type narrowing)
  # Кириллические символы в docstrings/строках/комментариях — намеренный выбор языка артефактов
  "RUF001",  # ambiguous-unicode-character-string
  "RUF002",  # ambiguous-unicode-character-docstring
  "RUF003",  # ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # тесты могут использовать assert и моковые credentials
# FastAPI идиома: `param: Type = Depends(...)` использует function call в default — это норма
"app/presentation/api/**" = ["B008"]
"app/presentation/exception_handlers.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MyPy — strict type checking для domain и application слоёв
# =============================================================================

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "app.domain.*"
strict = true

[[tool.mypy.overrides]]
module = "app.application.*"
strict = true

# =============================================================================
# Pytest — конфигурация тестов
# =============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "unit: юнит-тесты (быстрые, без внешних зависимостей)",
  "integration: интеграционные тесты (требуют PostgreSQL/HTTP)",
  "ml: метрологические тесты ML-моделей (медленные)",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
  "app/__init__.py",
  "*/tests/*",
  "alembic/*",
  "alembic/versions/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
